@@ -1,3 +1,13 @@
+2008-08-27  Holger Hans Peter Freyther <zecke@selfish.org>
+
+        Unreviewed compile fix
+
+        Add the stub for the Qt port.
+
+        * WebCore.pro:
+        * page/qt/AccessibilityObjectQt.cpp: Added.
+        (WebCore::AccessibilityObject::accessibilityIgnoreAttachment):
+
 2008-08-27  Alp Toker  <alp@nuanti.com>
 
         Reviewed by Eric.
